--- a/style.css
+++ b/style.css
@@ -1,96 +1,401 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/*General*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin:0;
+  padding:0;
+
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+body{
+  font-family: "Poppins",sans-serif;
 }
-a:hover {
-  color: #535bf2;
+html{
+  scroll-behavior: smooth;
 }
+p{
+  color:rgb(85,85,85);
+}
+/*Transition*/
 
-body {
-  margin: 0;
+a,
+.btn{
+  transition:all 300ms ease;
+}
+/*Desktop nav*/
+
+nav,
+.nav-links{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+nav{
+  justify-content: space-around;
+  align-items: center;
+  height:17vh;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.nav-links{
+  gap:2rem;
+  list-style: none;
+  font-size:1.5rem;
+}
+
+a{
+  color:black;
+  text-decoration: none;
+  text-decoration-color: white;
+}
+a:hover{
+  color:grey;
+  text-decoration:underline;
+  text-underline-offset:1rem;
+  text-decoration-color:rgb(181,181,181);
+}
+
+.logo{
+  font-size:2rem;
+}
+.logo:hover{
+  cursor:default;
+}
+
+/*Hamburger Menu*/
+#hamburger-nav{
+  display:none;
+}
+.hamburger-menu{
+  position:relative;
+  display: inline-block;
+}
+.hamburger-icon{
+  display: flex;
+  flex-direction:column;
+  justify-content:space-between;
+  height:24px;
+  width:30px;
+  cursor:pointer;
+}
+
+.hamburger-icon span{
+  width: 100%;
+  height: 2px;
+  background-color:black;
+  transition: all 0.3ms ease-in-out;
+}
+
+.menu-links{
+  position:absolute;
+  top:100%;
+  right :0;
+  background-color: white;
+  max-height:0;
+  overflow: hidden;
+  transition:all 0.3ms ease-in-out;
+}
+
+.menu-links a{
+  display :block;
+  padding:10px;
+  text-align: center;
+  font-size:1.5rem;
+  color:black;
+  text-decoration:none;
+  transition:all 0.3ms ease-in-out;
+
+}
+
+.menu-links li{
+  list-style:none;
+}
+.menu-links.open{
+  max-height:300px;
+}
+
+.hamburger-icon.open span:first-child{
+  transform:rotate(45deg) translate(10px,5px);
+}
+
+.hamburger-icon.open span:nth-child(2){
+  opacity: 0;
+}
+.hamburger-icon.open span:last-child{
+  transform:rotate(-45deg) translate(10px,-5px);
+}
+
+.hamburger-icon span:first-child{
+  transform:none;
+}
+
+.hamburger-icon span:first-child{
+  opacity: 1;
+}
+.hamburger-icon span:first-child{
+  transform:none;
+}
+
+/*Sections*/
+
+section{
+  padding-top:4vh;
+  height:96vh;
+  margin: 0 10rem;
+  box-sizing:border-box;
+  min-height: fit-content;
+}
+.section-container{
+  display: flex;
+}
+/*profile section*/
+#profile{
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height:80vh;
+}
+.section__pic-container{
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin:auto 0;
+}
+.section__text{
+  align-self: center;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.section__text p{
+  font-weight: 600;
 }
 
-.card {
-  padding: 2em;
+.section__text__p1{
+  text-align:center;
 }
 
-.read-the-docs {
-  color: #888;
+.section__text__p2{
+  font-size:1.7rem;
+  margin-bottom: 1rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.title{
+  font-size: 3rem;
+  text-align:center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#socials-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap:1rem;
+}
+
+/*ICONS*/
+
+.icon{
+  cursor:pointer;
+  height:2rem;
+}
+
+/*BUTTONS*/
+
+.btn-container{
+  display:flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.btn{
+  font-weight:600;
+  transition:all 300ms ease;
+  padding:1rem;
+  width:8rem;
+  border-radius:2rem;
+}
+.btn-color-1,
+.btn-color-2{
+  border:rgb(53,53,53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover{
+  cursor:pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover{
+  background: rgb(53,53,53);
+  color:white;
+}
+
+.btn-color-2{
+  background:none;
+}
+
+.btn-color-2:hover{
+  border:rgb(255,255,255) 0.1rem solid;
+}
+
+.btn-container{
+  gap:1rem;
+}
+
+/*ABOUT SECTION*/
+#about {
+  position: relative;
+}
+.about-containers{
+  gap:2rem;
+  margin-bottom:2rem;
+  margin-top:2rem;
+}
+
+.about-details-container{
+  justify-content: center;
+  flex-direction: column;
+}
+
+.about-containers,
+.about-details-container{
+  display:flex;
+}
+
+.about-pic{
+  border-radius: 2rem;
+}
+
+.arrow{
+  position: absolute;
+  right: -5rem;
+  bottom:2.5rem;
+}
+
+.details-container{
+  padding: 1.5rem;
+  flex:1;
+  background: white;
+  border-radius: 2rem;
+  border:rgb(53,53,53) 0.1rem solid;
+  text-align: center;
+}
+
+.section-container{
+  gap:4rem;
+  height:80%;
+}
+
+.section__pic-container{
+  height:400px;
+  width:400px;
+  margin:auto 0;
+}
+
+/*Experience Section*/
+
+#Experience{
+  position: relative;
+}
+
+.experience-sub-title{
+  color:rgb(85,85,85);
+  font-weight:600;
+  font-size:1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container{
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap:2.5rem;
+  justify-content: space-around;
+}
+
+article{
+  display:flex;
+  width:10rem;
+  justify-content:space-around;
+  gap:0.5rem;
+}
+article .icon{
+  cursor:default;
+}
+
+/*Projects Section*/
+
+#projects{
+  position:relative;
+}
+
+.color-container{
+  border-color:rgb(163,163,163);
+  background: rgb(250,250,250);
+}
+
+.projects-img{
+  border-radius:2rem;
+  width:90%;
+  height:90%;
+}
+
+.project-title{
+  margin:1rem;
+  color:black;
+}
+
+.project-btn{
+  color:black;
+  border-color:rgb(163,163,163);
+}
+
+/*Contact*/
+
+#contact{
+  display:flex;
+  justify-content:center;
+  flex-direction:column;
+  height:70vh;
+}
+
+.contact-info-upper-container{
+  display:flex;
+  justify-content:center;
+  border-radius:2rem;
+  border: rgb(53,53,53) 0.1rem solid;
+  background:rgb(250,250,250);
+  margin:2rem auto;
+  padding:0.5rem;
+}
+
+.contact-info-container{
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  gap:0.5rem;
+  margin:1rem;
+}
+
+.contact-info-container p{
+  font-size: larger;
+}
+
+.contact-icon{
+  cursor:default;
+}
+.email-icon{
+  height:2.5rem;
+}
+
+/*Footer Section*/
+
+footer{
+  height:26vh;
+}
+footer p{
+  text-align:center;
 }
